force-app/main/default/objects/Flow_Execution__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <label>CPU (ms)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>