force-app/main/default/objects/Flow_Execution__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <label>DML</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>