force-app/main/default/objects/Flow_Execution__c/fields/Primary_Record__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record__c</fullName>
    <label>Primary Record</label>
    <type>Text</type>
    <length>18</length>
    <description>ID of the primary record associated with the flow execution</description>
</CustomField>