force-app/main/default/objects/Flow_Execution__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <label>Run Time</label>
    <type>DateTime</type>
</CustomField>