force-app/main/default/objects/Flow_Execution__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <label>SOQL</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>